# simdexp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
bench/: CMakeLists.txt
bench/src/: addition_benchmarks.cpp  all_benchmarks.cpp
src/: CMakeLists.txt  main.cpp  main.h
src/addition/: CMakeLists.txt  addition.cpp  addition.h
src/experiments/: CMakeLists.txt  addition.cpp  addition.h  dotproduct.cpp  dotproduct.h  multiplication.cpp  multiplication.h
test/: CMakeLists.txt
test/src/: addition_tests.cpp  all_tests.cpp
